--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,39 @@
 	    <artifactId>jrpicam</artifactId>
 	    <version>0.2.0</version>
 	</dependency>
-		
+	
+	<dependency>
+	    <groupId>com.github.sarxos</groupId>
+	    <artifactId>webcam-capture-driver-v4l4j</artifactId>
+	    <version>0.3.12</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>2.0.0-alpha6</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>2.0.0-alpha6</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	
+	<dependency>
+	  <groupId>com.github.sarxos</groupId>
+	  <artifactId>v4l4j</artifactId>
+	  <version>0.9.1-r507</version>
+	</dependency>
+	
+	<dependency>
+	  <groupId>com.github.sarxos</groupId>
+	  <artifactId>webcam-capture</artifactId>
+	  <version>0.3.12</version>
+	</dependency>
+	
   </dependencies>
   
 	<properties>
