--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,37 @@
 					</execution>
 				</executions>
 			</plugin>
+			 <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-shade-plugin</artifactId>
+			    <version>3.2.4</version>
+			    <executions>
+			        <execution>
+			            <phase>package</phase>
+			            <goals>
+			                <goal>shade</goal>
+			            </goals>
+			            <configuration>
+			                <minimizeJar>true</minimizeJar>
+			                <filters>
+			                    <filter>
+			                        <artifact>*:*</artifact>
+			                        <excludes>
+			                            <exclude>META-INF/*.SF</exclude>
+			                            <exclude>META-INF/*.DSA</exclude>
+			                            <exclude>META-INF/*.RSA</exclude>
+			                        </excludes>
+			                    </filter>
+			                </filters>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
 		</plugins>
 	</build>
   
   <dependencies>
+  	
 	 <dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
@@ -46,6 +73,18 @@
 	    <scope>test</scope>
 	</dependency>
 	
+	 <dependency>
+	    <groupId>org.boofcv</groupId>
+	    <artifactId>boofcv-core</artifactId>
+	    <version>0.40.1</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.boofcv</groupId>
+	    <artifactId>boofcv-swing</artifactId>
+	    <version>0.40.1</version>
+	</dependency>
+  	
 	<dependency>
 	    <groupId>com.pi4j</groupId>
 	    <artifactId>pi4j-core</artifactId>
