--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ACORobotics</groupId>
   <artifactId>AlphaTest</artifactId>
-  <version>1-SNAPSHOT</version>
-  <description>Disstertation Project</description>
+  <version>1.1.0-SNAPSHOT</version>
+  <description>Getting ultrasound working (again)</description>
   <organization>
   	<url>https://github.com/johnl5124</url>
   	<name>John Lloyd</name>
