--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,17 @@
 	    <version>0.40.1</version>
 	</dependency>
 	
-<!-- 	<dependency>
-	    <groupId>org.boofcv</groupId>
-	    <artifactId>boofcv-swing</artifactId>
-	    <version>0.40.1</version>
-	</dependency> -->
+	<dependency>
+	  <groupId>com.github.sarxos</groupId>
+	  <artifactId>webcam-capture</artifactId>
+	  <version>0.3.12</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>com.github.sarxos</groupId>
+	    <artifactId>webcam-capture-driver-v4l4j</artifactId>
+	    <version>0.3.12</version>
+	</dependency>
   	
 	<dependency>
 	    <groupId>com.pi4j</groupId>
